<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/sites">
        <item
            android:id="@+id/nav_current"
            android:icon="@drawable/ic_current"
            android:title="@string/action_current"
            android:checked="true" />
        <item
            android:id="@+id/nav_replacement"
            android:icon="@drawable/ic_list"
            android:title="@string/action_replacement" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_list"
            android:title="@string/action_schedule" />
    </group>

    <group>
        <item
            android:id="@+id/nav_settings_schedule"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings_schedule" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>
</menu>
