<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        android:paddingBottom="24dp"
        android:paddingEnd="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingStart="24dp"
        android:paddingTop="0dp">

        <de.vent_projects.ffg_planner.setup.ui.schedule.SetupLessonDialogSpinner
            android:id="@+id/spinner_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/check_box_similar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_similar_to_lesson"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_options" />

        <CheckBox
            android:id="@+id/check_box_free"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/word_free"
            app:layout_constraintEnd_toEndOf="@+id/check_box_similar"
            app:layout_constraintStart_toStartOf="@+id/check_box_similar"
            app:layout_constraintTop_toBottomOf="@+id/check_box_similar" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_name"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/check_box_free"
            app:layout_constraintStart_toStartOf="@+id/check_box_free"
            app:layout_constraintTop_toBottomOf="@+id/check_box_free" />

        <EditText
            android:id="@+id/edit_text_teacher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_teacher"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_name"
            app:layout_constraintStart_toStartOf="@+id/edit_text_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />

        <EditText
            android:id="@+id/edit_text_room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_room"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_teacher"
            app:layout_constraintStart_toStartOf="@+id/edit_text_teacher"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_teacher" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>