<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/card_margin_half"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin_half"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:layout_marginTop="4dp"
        android:text="@string/word_error"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_attention"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin_half"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin_half"
        android:descendantFocusability="blocksDescendants"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingEnd="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="15dp"
            android:paddingStart="5dp"
            android:paddingTop="12dp">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_attention" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/icon"
                android:layout_toRightOf="@+id/icon"
                android:orientation="vertical"
                android:paddingLeft="10sp"
                android:paddingStart="10sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word_attention"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="?android:attr/textColorPrimary" />

                <TextView
                    android:id="@+id/text_attention"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/word_error" />
            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_replacement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin_half"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin_half"
        android:descendantFocusability="blocksDescendants"
        android:padding="@dimen/card_padding">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_replacements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin_half"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin_half"
        android:descendantFocusability="blocksDescendants">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingEnd="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="15dp"
            android:paddingStart="5dp"
            android:paddingTop="12dp">

            <ImageView
                android:id="@+id/info_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/info_icon"
                android:layout_toRightOf="@+id/info_icon"
                android:orientation="vertical"
                android:paddingLeft="10sp"
                android:paddingStart="10sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word_information"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="?android:attr/textColorPrimary" />

                <TextView
                    android:id="@+id/text_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/word_error" />
            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>